test/testdata/result/invalid_property_assignment_error.lox
(try 1).y = 1; // error: property assignment is not valid for 'result' value
